--- a/index.html
+++ b/index.html
@@ -14,9 +14,44 @@
 <section id="container">
 <article class="cartao">
 <div class="cartao__conteudo">
-<h3>Programação</h3>
-<div class="cartao__conteudo__pergunta"> O que é JavaScript?</div>
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta"> Oque é futebol?</div>
+<div class="cartao__conteudo__resposta"> Futebol é um esporte mundialmente conhecido,principalmente no brasil</div>
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta"> Quando surgiu ?</div>
+<div class="cartao__conteudo__resposta"> </div>
+</div>
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta">Quem criou a seleção Brasileira ?</div>
+<div class="cartao__conteudo__resposta"> A Seleção Brasileira de Futebol foi formada pela Federação Brasileira de Sports </div>
+</div>
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta"> Quantas copa do mundo o Brasil tem ?</div>
 <div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
+</div>
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta"> Existe futebol feminino ?</div>
+<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
+</div>
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta"> Quantos anos tem a seleção brasileira?</div>
+<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
+</div>
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta"> O que é o var?</div>
+<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
+</div>
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta"> O que ?</div>
+<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
+</div>
 </div>
 <article class="cartao">
 <div class="cartao__conteudo">
