--- a/index.html
+++ b/index.html
@@ -17,47 +17,53 @@
 <h3>Futebol</h3>
 <div class="cartao__conteudo__pergunta"> Oque é futebol?</div>
 <div class="cartao__conteudo__resposta"> Futebol é um esporte mundialmente conhecido,principalmente no brasil</div>
-<div class="cartao__conteudo">
-<h3>Futebol</h3>
-<div class="cartao__conteudo__pergunta"> Quando surgiu ?</div>
-<div class="cartao__conteudo__resposta"> </div>
 </div>
+    </article>
+      <h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta"> Quando surgiu ?</div>
+<div class="cartao__conteudo__resposta">surgiu na inglaterra no século XIX </div> 
+</div>   
+</article>
 <div class="cartao__conteudo">
 <h3>Futebol</h3>
 <div class="cartao__conteudo__pergunta">Quem criou a seleção Brasileira ?</div>
 <div class="cartao__conteudo__resposta"> A Seleção Brasileira de Futebol foi formada pela Federação Brasileira de Sports </div>
-</div>
+</div>   
+</article>
 <div class="cartao__conteudo">
-<h3>Futebol</h3>
-<div class="cartao__conteudo__pergunta"> Quantas copa do mundo o Brasil tem ?</div>
-<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
-</div>
+<div class="cartao__conteudo__pergunta"> Quantas copa do mundo o Brasil tem?
+    <div class="cartao__conteudo__resposta"> 5 copas</div>
+</div>  
+ </article>
 <div class="cartao__conteudo">
 <h3>Futebol</h3>
 <div class="cartao__conteudo__pergunta"> Existe futebol feminino ?</div>
-<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
-</div>
+<div class="cartao__conteudo__resposta">Sim, existe futebol feminino. É uma modalidade esportiva praticada por mulheres em todo o mundo </div>
+</div>  
+ </article>
 <div class="cartao__conteudo">
 <h3>Futebol</h3>
 <div class="cartao__conteudo__pergunta"> Quantos anos tem a seleção brasileira?</div>
-<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
-</div>
+<div class="cartao__conteudo__resposta"> 111 anos de existência. </div>
+</div>  
+ </article>
 <div class="cartao__conteudo">
 <h3>Futebol</h3>
 <div class="cartao__conteudo__pergunta"> O que é o var?</div>
-<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
-</div>
+<div class="cartao__conteudo__resposta"> VAR é a sigla para Árbitro Assistente de Vídeo</div>
+</div>  
+ </article>
 <div class="cartao__conteudo">
 <h3>Futebol</h3>
-<div class="cartao__conteudo__pergunta"> O que ?</div>
-<div class="cartao__conteudo__resposta"> é uma linguagem de Programação</div>
-</div>
-</div>
+<div class="cartao__conteudo__pergunta"> Quais são os 7 fundamentos do futebol ?</div>
+<div class="cartao__conteudo__resposta">Os 7 fundamentos do futebol são: passe, chute, drible, domínio de bola, cabeceio, condução de bola e marcação </div>
+</div>   
+</article>
 <article class="cartao">
 <div class="cartao__conteudo">
-<h3>Programação</h3>
-<div class="cartao__conteudo__pergunta"> O que é CSSt?</div>
-<div class="cartao__conteudo__resposta"> é uma linguagem de estilização</div>
+<h3>futebol</h3>
+<div class="cartao__conteudo__pergunta"> quantos times brasileiros existem?</div>
+<div class="cartao__conteudo__resposta"> 778 clubes profissionais em atividade, mas apenas 56 são formadores certificados pela confederação brasileira de futebol, a CBF. </div>
 </div>
 </article>
 </section>
