--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 <title>flashcards</title>
 </head>
 
@@ -75,7 +76,7 @@
 <footer>
 <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
 </footer>
-
+<script src="script.js"></script>
 </body>
 
 
