--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
-<title>flashcards</title>
+         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel="stylesheet" href="style.css">
+           <title>flashcards</title>
 </head>
-
-
-
 <body>
 
 <main>
-<section id="container">
-<article class="cartao">
-<div class="cartao__conteudo">
-<h3>Futebol</h3>
-<div class="cartao__conteudo__pergunta"> Oque é futebol?</div>
-<div class="cartao__conteudo__resposta"> Futebol é um esporte mundialmente conhecido,principalmente no brasil</div>
-</div>
-    
-</article>
-      <h3>Futebol</h3>
-<div class="cartao__conteudo__pergunta"> Quando surgiu ?</div>
-<div class="cartao__conteudo__resposta">surgiu na inglaterra no século XIX </div> 
-</div>   
+     <section id="container">
 
-</article>
+        <article class="cartao">
+     <div class="cartao__conteudo">
+     <h3>Futebol</h3>
+     <div class="cartao__conteudo__pergunta"> Oque é futebol?</div>
+     <div class="cartao__conteudo__resposta"> Futebol é um esporte mundialmente conhecido,principalmente no brasil</div>
+    </div>
+     </article> 
+
+     <article class="cartao"
+      <div class="cartao__conteudo__pergunta"> Quando surgiu ?</div>
+      <h3>futebol</h3>
+      <div class="cartao__conteudo__resposta">surgiu na inglaterra no século XIX </div> 
+     </div>   
+     </article>
+
 <div class="cartao__conteudo">
 <h3>Futebol</h3>
 <div class="cartao__conteudo__pergunta">Quem criou a seleção Brasileira ?</div>
